# final-year-project

./: README.md  how frontend runs.txt  pyproject.toml
backend/: appointments_db.db  backend.py  database.py  db_demo.py
frontend/: package-lock.json  package.json  postcss.config.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/availability/: page.tsx
frontend/app/book/: page.tsx
frontend/app/cancel/: page.tsx
frontend/app/components/: VapiWidget.tsx
frontend/app/lib/: api.ts
